# GithubActionsAdept

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: remoteBuild.yml
include/DRVR/: config.h
include/UTIL/: stash.h
src/: main.c
src/BKEND/: ir_to_c.c
src/DRVR/: compiler.c  config.c
src/IRGEN/: ir_builder.c
src/UTIL/: download.c  stash.c
tests/e2e/: CMakeLists.txt  e2e-runner.py  framework.py
tests/e2e/src/assign_autogen_func_called/: main.adept
tests/e2e/src/defer_group/: main.adept
tests/e2e/src/initializer_list_fixed/__ignore__/: error  error.ll  l2  llvm.txt  llvm2.txt  main.adept  newir  ok  ok.ll  test
tests/e2e/src/polymorph_loose/: main.adept
tests/unit/: CMakeLists.txt
tests/unit/src/: HelloWorld.c  UnitTestRunner.c  ast_expr.test.c  lex.test.c
